Bug #27921 View ignores precision for CAST() Item_decimal_typecast::print properly implemented